--- a/IMQ1.BCL.2017/IMQ1.BCL.2017.RegularExpression.Library/IMQ1.BCL.2017.RegularExpression.Library.csproj
+++ b/IMQ1.BCL.2017/IMQ1.BCL.2017.RegularExpression.Library/IMQ1.BCL.2017.RegularExpression.Library.csproj
@@ -4,18 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BA28A87A-0FBF-475F-A818-DEC39FB476E8}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{5EB5F031-B121-4B75-99D5-D0305B2DD183}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IMQ1.BCL._2017.FileSorter.Executor</RootNamespace>
-    <AssemblyName>IMQ1.BCL.2017.FileSorter.Executor</AssemblyName>
+    <RootNamespace>IMQ1.BCL._2017.RegularExpression.Library</RootNamespace>
+    <AssemblyName>IMQ1.BCL.2017.RegularExpression.Library</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -35,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,18 +39,23 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnidecodeSharpFork">
+      <HintPath>..\..\Lib\UnidecodeSharpFork.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="AppConfig\FileElement.cs" />
+    <Compile Include="AppConfig\FormatSection.cs" />
+    <Compile Include="AppConfig\ResultElement.cs" />
+    <Compile Include="AppConfig\SubstringElement.cs" />
+    <Compile Include="Unidecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnidecoderCustomSpeaker.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IMQ1.BCL.2017.FileSorter.Library\IMQ1.BCL.2017.FileSorter.Library.csproj">
-      <Project>{03758a0c-1d82-4c22-98fb-5bece3f72c44}</Project>
-      <Name>IMQ1.BCL.2017.FileSorter.Library</Name>
+    <ProjectReference Include="..\IMQ1.BCL.2017.Infrastructure\IMQ1.BCL.2017.Infrastructure.csproj">
+      <Project>{4F7A414D-0FD3-42BF-AD36-EE2D0B1735BE}</Project>
+      <Name>IMQ1.BCL.2017.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
